# fogros2-ls

./: Dockerfile  README.md  docker-compose.yaml
bench/: demo_ros_server.py  demo_ros_service.py  docker_ros_server.py  test_ros_server.py
bench/benchmark_code/: package.xml  setup.py
bench_msgs/: package.xml
core/: Cargo.toml
core/src/: api_server.rs  commands.rs  connection_fib.rs  db.rs  lib.rs  pipeline.rs  service_manager.rs  structs.rs  topic_manager.rs  util.rs
examples/bench/: Dockerfile  demo_ros_routing.py  demo_ros_server.py  od  topology.yaml
examples/bench_msgs/: CMakeLists.txt
sgc_launch/: README.md  package.xml  setup.cfg  setup.py
sgc_launch/configs/: automatic.toml  full-template.yaml  generate_crypto.sh  h264.yaml  listener.yaml  offload_detection.yaml  profiler.yaml  pubsub-benchmark.yaml  service-apriltag.yaml  service-client-topics.yaml  service-client.yaml  service-gqcnn.yaml  service-mpt.yaml  service-sam.yaml  service-yolo.yaml  sgc.yaml  storm_sgc.yaml  talker-listener.yaml  talker.yaml  template.yaml
sgc_launch/launch/: h264_decoder.py  h264_encoder.py  listener.launch.py  offload_detection.cloud.launch.py  offload_detection.robot.launch.py  offload_detection.service.launch.py  profiler.robot.launch.py  profiler.service.cloud.launch.py  profiler.service.launch.py  profiler.service.local.launch.py  talker.launch.py
sgc_launch/sgc_launch/: heuristic_pubsub.py  sgc_node.py  sgc_policy_scheduler.py  utils.py  (+1 more)
sgc_msg/: CMakeLists.txt  package.xml
sgc_msg/srv/: SgcAssignment.srv
sgc_msgs/: CMakeLists.txt
src/: main.rs
(+39 files in other folders)
